# tiringa-vs-werewolf

./: README.md  TiringaVsWerewolf.cabal  cbrun.sh  game.hs  main.hs  maps.hs  position.hs  ranking.txt  run.sh  templateMap.txt  test.hs  tiringa.hs  util.hs  wereWolf.hs
src/: Game.hs  Main.hs  Maps.hs  Teste.hs  Tiringa.hs  Util.hs  WereWolf.hs
